# mylange

./: .gitignore  DOCS.md  LICENSE  README.md  TODO  _run.ps1  booleanlogic.py  build.bat  builtinfunctions.py  debug.my  interpreter.py  lantypes.py  main.py  memory.py  mylange.md  pyproject.toml  regexes.py  term.py
examples/: Person.my  __.myl  array.my  class.my  classa.my  config.my  debug.my  dynamic.my  ex.tasp  function.my  functionandindex.my  hello.my  if.my  import.my  overloads.my  redef.my  set.my  tasparray.tasp  taspdoublearray.tasp  taspobjectlist.tasp  taspsimpleobject.tasp  trycatch.my  where.my
pysrc/: .old.tree.txt  booleanlogic.py  builtinfunctions.py  interface.py  interpreter.py  lanarithmetic.py  lanclass.py  lanerrors.py  lanregexes.py  lantypes.py  memory.py  mylange.py  regexes.py  small.py  tasp.py  term.py  version.py
